--- a/plugin.xml
+++ b/plugin.xml
@@ -13,7 +13,7 @@
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="SZnewbestPrinter">
-				<param name="android-package" value="marisfrolg.printer.SZnewbestPrinter" />
+				<param name="android-package" value="marisfrolg.printer" />
 			</feature>
 		</config-file>
 		<config-file parent="/*" target="AndroidManifest.xml" />
